# superpico-digital

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  SCRATCHBOOK.md  flash
docs/: CAPTURE_BREAKTHROUGH.md  CAPTURE_DEBUG_STATUS.md  REFERENCES.md  SNES_2-Chip_APU_Audio.md  SNES_2-Chip_CPU_5A22.md  SNES_2-Chip_Connectors_Pinouts.md  SNES_2-Chip_Memory_Bus_Interconnect.md  SNES_2-Chip_Overview.md  SNES_2-Chip_PPU1_5C77.md  SNES_2-Chip_PPU2_5C78.md  SNES_2-Chip_Support_ICs.md  SNES_Digital_AV_Mod_Pin_Reference.md
docs/.obsidian/: workspace.json
hardware/: crawl_thread.py
hardware/docs/: shmups_thread.md
hardware/snes_fpc/: New_Library.kicad_sym  Snes.kicad_sym  snes_fpc.kicad_pcb  snes_fpc.kicad_prl  snes_fpc.kicad_pro  snes_fpc.kicad_sch  sym-lib-table
hardware/snes_fpc/Library.pretty/: Audio_Pads.kicad_mod  Controller_Pads.kicad_mod  PPU2_FPC.kicad_mod
hardware/thread_output/: page_01.md  page_02.md
scripts/: build.sh  capture_frame.py  monitor_serial.py
src/: CMakeLists.txt  config.h  freq_counter.c  freq_counter.h  main.c  settings.c  settings.h  snes_pins.h
src/audio/: audio_buffer.c  audio_buffer.h  audio_common.h  audio_pipeline.c  audio_pipeline.h  i2s_capture.c  i2s_capture.h  i2s_capture.pio  melodies.h  src.c  src.h
src/experiments/: menu_diag_experiment.c  menu_diag_experiment.h
src/osd/: fast_osd.c  fast_osd.h  font_8x8.h  osd.c  osd.h  selftest_layout.c  selftest_layout.h
src/video/: freq_counter.c  freq_counter.h  line_ring.h  snes_timing.h  video_capture.c  video_capture.h  video_capture.pio  video_config.h  video_pipeline.c  video_pipeline.h
